[project]
name = "qgisplugx"
version = "0.0.1"
description = ""
authors = ["MIERUNE Inc. <info@mierune.co.jp>"]
readme = "README.md"
packages = [
  #{ include = "qgis", from = "C:\\Program Files\\QGIS 3.28.2\\apps\\qgis\\python" },
]
requires-python = ">=3.9"


[dependency-groups]
dev = [
  "black>=23.1,<25.0",
  "pytest>=7.2.1",
  "pytest-cov>=4.0.0",
  "pytest-qgis>=1.3.2",
  "ruff>=0.0.267",
  "pyqt5>=5.15.9",
]
